# atmostracers

./: CMakeLists.txt  LICENSE  README  README.md  addcomp.c  addcomp.h  create_so.sh  update_so.sh
build_scripts/: build.sh  build_install.sh  debug.sh
doc/: doc.blg  doc.tex
include/: atmostracers.h
src/: addcomp.c  atmostracers.c
