cmake_minimum_required(VERSION 3.10)
set(version_major 0)
set(version_minor 1)
set(version_patch 2)
set(version ${version_major}.${version_minor}.${version_patch})
project(addcomp VERSION ${version})
SET(mylibSRCS src/addcomp.c)
ADD_LIBRARY(addcomp SHARED ${mylibSRCS})
TARGET_LINK_LIBRARIES(addcomp)
set_target_properties(addcomp PROPERTIES PUBLIC_HEADER include/addcomp.h)
enable_testing()
SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Max H. Balsmeier")
SET(CPACK_PACKAGE_NAME "addcomp")
SET(CPACK_PACKAGE_VERSION_MAJOR ${version_major})
SET(CPACK_PACKAGE_VERSION_MINOR ${version_minor})
SET(CPACK_PACKAGE_VERSION_PATCH ${version_patch})
INCLUDE(CPack)
include(GNUInstallDirs)
install(TARGETS addcomp 
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
