cmake_minimum_required(VERSION 3.10)
set(version_major 0)
set(version_minor 1)
set(version_patch 1)
set(CMAKE_C_COMPILER mpicc)
add_definitions(-Wall)
# find_package(OpenMP)
# SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
set(version ${version_major}.${version_minor}.${version_patch})
project(atmostracers VERSION ${version})
SET(mylibSRCS src/atmostracers.c)
ADD_LIBRARY(atmostracers SHARED ${mylibSRCS})
TARGET_LINK_LIBRARIES(atmostracers)
set_target_properties(atmostracers PROPERTIES PUBLIC_HEADER include/atmostracers.h)
enable_testing()
SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "atmostracers development team")
SET(CPACK_PACKAGE_NAME "atmostracers")
SET(CPACK_PACKAGE_VERSION_MAJOR ${version_major})
SET(CPACK_PACKAGE_VERSION_MINOR ${version_minor})
SET(CPACK_PACKAGE_VERSION_PATCH ${version_patch})
INCLUDE(CPack)
include(GNUInstallDirs)
install(TARGETS atmostracers
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
